# art-smuggler

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/.mise/: config.toml
backend/.mise/tasks/: init_python
backend/scripts/: add_mark.py  run.py  run_experiment.py  run_server.py
backend/scripts/pyramid/: run_high_pass.py  run_incremental.py  run_low_pass.py  run_no_pass.py
backend/scripts/svg/: README.md  fill_svg.py  fix_svg.py  recombine_svg.py  run_svg.py  split_svg.py
backend/src/all_things_ones/api/: api.py
backend/src/all_things_ones/api/routes/: process_image.py  root.py
backend/src/all_things_ones/blob/: detect_blobs.py  visualise_blobs.py
backend/src/all_things_ones/core/: add_corner_mark.py  adjust_image_brightness.py  combine_images.py  create_paired_image.py  darken_image.py  low_pass_filter.py  resize_image.py  shatter_image.py  split_image.py  trim_colour_to_fit.py
backend/src/all_things_ones/dream/: deep_dream.py
backend/src/all_things_ones/files/: clear_files.py  load_image.py  save_image.py
backend/src/all_things_ones/inpainting/: __init__.py  inpaint.py
backend/src/all_things_ones/logic/blob/: __init__.py  model.py  (+1 more)
backend/src/all_things_ones/segmentation/: __init__.py  segment_by_frequency.py
backend/src/all_things_ones/shatter/: __init__.py  create_shatter_pattern.py  shatter_image.py  shatter_image_with_cache.py
scraper/: README.md  pyproject.toml
scraper/.mise/tasks/: init_python  run_python
scraper/scripts/: run.py
scraper/src/leonardo_ui_interactor/core/: types.py  ui_interactor.py
(+56 files in other folders)
